# ebook-translator

./: .coverage  .env.example  .gitignore  CLAUDE.md  Chapter 4_ Celia's Decision.epub  README.fr.md  README.md  example.py  example_pipeline.py  pyproject.toml  pyrightconfig.json  start.py  test.py  test_correction_pool.py  test_fragment_error_message.txt  test_fragment_validation.py  test_overlap.py  test_pool_simple.py  test_store_concurrency.py  test_targeted_retry.py  test_targeted_retry_output.txt
.claude/: settings.local.json
.translation_cache/: Text_chapter1.xhtml_c79878be.json  Text_chapter1_1.xhtml_7790ef33.json  Text_prologue.xhtml_af240081.json
docs/: CHANGELOG_v0.3.0.md  error_handling.md  glossary_validation.md  logging_system.md  retry_validation_improvement.md
src/ebook_translator/: __init__.py  __main__.py  config.py  glossary.py  glossary_filters.py  llm.py  logger.py  segment.py  store.py  worker.py
src/ebook_translator/checks/: __init__.py  base.py  fragment_count_check.py  line_count_check.py  pipeline.py  punctuation_check.py  retry_helper.py
src/ebook_translator/correction/: __init__.py  correction_worker.py  correction_worker_pool.py  error_queue.py  retry_engine.py
src/ebook_translator/htmlpage/: __init__.py  bilingual.py  constants.py  exceptions.py  page.py  replacement.py  tag_key.py
src/ebook_translator/llm/: llm.py  template_params.py  template_renderers.py
src/ebook_translator/pipeline/: __init__.py  glossary_validator.py  phase1_worker.py  phase2_worker.py  two_phase_pipeline.py
src/ebook_translator/quality/: __init__.py  validator.py
src/ebook_translator/stores/: __init__.py  glossary_store.py  multi_store.py
src/ebook_translator/translation/: __init__.py  engine.py  epub_handler.py  language.py  parser.py  translator.py
src/ebook_translator/validation/: __init__.py  glossary.py  save_worker.py  terminology_checker.py  untranslated_detector.py  validation_queue.py  validation_worker.py  validation_worker_pool.py  validator.py
template/: refine.jinja  retry_fragments.jinja  retry_fragments_flexible.jinja  retry_missing_lines.jinja  retry_missing_lines_targeted.jinja  retry_punctuation.jinja  retry_translation.jinja  retry_translation_flexible.jinja  retry_translation_strict.jinja  translate.jinja  translate2.jinja
tests/: conftest.py  test_error_handling.py  test_fragment_correction.py  test_fragment_progressive_retry.py  test_glossary_filtering.py  test_glossary_validator.py  test_line_filtering.py  test_line_validation.py  test_llm_logging.py  test_logger_session.py  test_real_world_case.py  test_retry_helper.py  test_retry_integration.py  test_retry_validation.py  test_segment.py  test_store.py  test_tag_key.py  test_translation_quality.py  test_validation.py  test_whitespace.py
