[project]
name = "ebook-translator"
version = "0.1.0"
description = ""
authors = [
    {name = "NeOzay",email = "colpaert.benoit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ebooklib (>=0.19,<0.20)",
    "openai (>=2.1.0,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "tiktoken (==0.12.0)",
    "jinja2 (==3.1.6)",
]

[tool.poetry]
packages = [{include = "ebook_translator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
