[project]
name = "ebook-translator"
version = "0.1.0"
description = "Traduisez des fichiers EPUB en utilisant des Large Language Models (DeepSeek, OpenAI, etc.)"
authors = [
    {name = "NeOzay", email = "neozay.ozay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["epub", "translation", "llm", "deepseek", "openai", "ebook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ebooklib (>=0.19,<0.20)",
    "openai (>=2.1.0,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "tiktoken (==0.12.0)",
    "jinja2 (==3.1.6)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "tqdm (>=4.66.0,<5.0.0)",
]

[project.scripts]
ebook-translator = "ebook_translator.__main__:main"

[project.urls]
Homepage = "https://github.com/NeOzay/ebook-translator"
Repository = "https://github.com/NeOzay/ebook-translator"
Issues = "https://github.com/NeOzay/ebook-translator/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "pyright>=1.1.0,<2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "build", "dist"]
venvPath = "."
venv = ".venv"

[tool.poetry]
packages = [{include = "ebook_translator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
